--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ google_analytics: UA-XXXXXXXXX # out your google-analytics code
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
-blog_name: al-folio
+blog_name: Rowl1ng
 blog_description: a simple whitespace theme for academics
 
 # Pagination
