--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
-name: Ling Luo
+title: Ling Luo
 email: ling.rowling.luo@gmail.com
 description: > # this means to ignore newlines until "url:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
@@ -21,7 +21,7 @@ github_username: Rowl1ng # your GitHub user name
 twitter_username: Rowl1ngLuo # your Twitter handle
 linkedin_username: # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
-orcid_id: # your ORCID ID
+orcid_id: 0000-0003-3504-4110 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 
@@ -34,7 +34,7 @@ google_analytics: UA-XXXXXXXXX # out your google-analytics code
 # Blog
 # -----------------------------------------------------------------------------
 blog_name: Rowl1ng
-blog_description: a simple whitespace theme for academics
+blog_description: 
 
 # Pagination
 paginate: 4
@@ -47,7 +47,7 @@ text:
     older: 'Older'
 
 # Comments
-disqus_shortname: al-folio # put your disqus shortname
+# disqus_shortname: al-folio # put your disqus shortname
 
 # Optional features
 show_social_icons:  false
