--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,8 +1,5 @@
-Adams:
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"Yulia":
+  - firstname: ["Gryaditskaya", "Yulia", "Gryaditskaya Yulia"]
+    url: https://https://yulia.gryaditskaya.com/
 
-Podolsky:
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
 
-Rosen:
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
