--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,5 +1,9 @@
 "Yulia":
   - firstname: ["Gryaditskaya", "Yulia", "Gryaditskaya Yulia"]
-    url: https://https://yulia.gryaditskaya.com/
+    url: https://yulia.gryaditskaya.com/
+
+"Yi-Zhe":
+  - firstname: ["Yi-Zhe", "Yi-Zhe Song"]
+    url: http://personal.ee.surrey.ac.uk/Personal/Y.Song/
 
 
