--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,8 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # -----------------------------------------------------------------------------
 github_username: Rowl1ng # your GitHub user name
 twitter_username: LingLuo95 # your Twitter handle
-linkedin_username: # your LinkedIn user name
-scholar_userid: # your Google Scholar ID
+linkedin_username: rowl1ng # your LinkedIn user name
+scholar_userid: sqHkGCQAAAAJ # your Google Scholar ID
 orcid_id: 0000-0003-3504-4110 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
@@ -186,9 +186,9 @@ sass:
 # Jekyll-Scholar
 scholar:
   last_name: Luo
-  first_name: [Ling, L]
+  first_name: [Ling, L.]
 
-  style: apa
+  style: ieee
   locale: en
 
   source: /_bibliography/
@@ -244,7 +244,7 @@ enable_math:                true   # enables math typesetting (uses MathJax)
 enable_tooltips:            false  # enables automatic tooltip links generated
                                    # for each section titles on pages and posts
 enable_darkmode:            true   # enables switching between light/dark modes
-enable_navbar_social:       false  # enables displaying social links in the
+enable_navbar_social:       true  # enables displaying social links in the
                                    # navbar on the about page
 enable_project_categories:  true   # enables categorization of projects into
                                    # multiple categories
